--- a/nuget/AForge.Math.nuspec
+++ b/nuget/AForge.Math.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
-		<id>AForge</id>
-		<title>AForge - Core library</title>
+		<id>AForge.Math</id>
+		<title>AForge.Math - Math utilities</title>
 		<version>$version$</version>
 		<authors>Andrew Kirillov</authors>
 		<owners>Nathanael Jones</owners>
@@ -10,13 +10,14 @@
 		<projectUrl>http://www.aforgenet.com/framework/</projectUrl>
 		<iconUrl></iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>Contains classes that are used by nearly all the AForge libraries. LGPL licensed.
+		<description>Contains math utilities, which are used by other AForge.NET namespaces or may be used individually. LGPL licensed.
 		<tags>AForge Computer Vision Neural Networks Video Processing Genentic Fuzzy Robotics Machine Learning Image Processing</tags>
 		<dependencies>
+			<dependency id="AForge" />
 		</dependencies>
 	</metadata>
   	<files>
-		<file src="..\Release\AForge.dll" target="lib" />
-		<file src="..\Release\AForge.xml" target="lib" />
+		<file src="..\Release\AForge.Math.dll" target="lib" />
+		<file src="..\Release\AForge.Math.xml" target="lib" />
 	</files>
 </package>
