Got AForgeUploader building.

--- a/Tools/AforgeUploader/AforgeUploader.csproj
+++ b/Tools/AforgeUploader/AforgeUploader.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>69fe6c44-9a3b-4ec0-8b88-9092ff533386</ProjectGuid>
+    <ProjectGuid>{D1246BE5-DAD5-4348-BF26-14625BAB09C3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AforgeUploader</RootNamespace>
-    <AssemblyName>AforgeUploader</AssemblyName>
+    <RootNamespace>AForgeUploader</RootNamespace>
+    <AssemblyName>AForgeUploader</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -34,6 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LitS3">
+      <HintPath>..\..\..\resizer\Tools\Builder\packages\LitS3.1.0.1\lib\LitS3.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,8 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Build.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\resizer\Tools\BuildTools\BuildTools.csproj">
+      <Project>{F32CED6D-C516-46A6-BC00-369842F98B5A}</Project>
+      <Name>BuildTools</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
