Updated build path, fixed LitS3 dependency.

--- a/nuget/AforgeUploader/AForgeUploader.csproj
+++ b/nuget/AforgeUploader/AForgeUploader.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LitS3">
-      <HintPath>..\..\..\resizer\Tools\Builder\packages\LitS3.1.0.1\lib\LitS3.dll</HintPath>
+      <HintPath>packages\LitS3.1.0.1\lib\LitS3.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
