Changed framework to standard from client profile so LitS3 would load. Modified Build namesapace so it would build, and make the output directory be automatically created. (and moved it to /nuget/built-packages/

--- a/nuget/AforgeUploader/AForgeUploader.csproj
+++ b/nuget/AforgeUploader/AForgeUploader.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>AForgeUploader</RootNamespace>
     <AssemblyName>AForgeUploader</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -58,6 +59,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
