Updated the icon field to use the old framework icon - now they build, finally.

--- a/nuget/AForge.Imaging.nuspec
+++ b/nuget/AForge.Imaging.nuspec
@@ -8,7 +8,7 @@
 		<owners>Nathanael Jones</owners>
 		<licenseUrl>http://www.aforgenet.com/framework/license.html</licenseUrl>
 		<projectUrl>http://www.aforgenet.com/framework/</projectUrl>
-		<iconUrl></iconUrl>
+		<iconUrl>http://code.google.com/p/aforge/logo?cct=1303246607</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Contains an unparalleled assortment of (efficient) image processing, filtering, and object detection classes. Energy filters, automatic histogram adjustments, localized binarization, and more.</description>
 		<tags>AForge Computer Vision Neural Networks Video Processing Genentic Fuzzy Robotics Machine Learning Image Processing</tags>
